# dynamify-poc

./: .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json
src/: config.rs  gemini.rs  main.rs
templates/: dynamic.html  hello.html
