[package]
name = "dinamify-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
config = "0.13"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.140"
html-escape = "0.2.13"


